--- a/backstage/templates/llama-deployment.yaml.hbs
+++ b/backstage/templates/llama-deployment.yaml.hbs
@@ -24,7 +24,7 @@ spec:
             - containerPort: 8080
           env:
             - name: MODEL_ID
-              value: meta-llama/Llama-2-7b-chat-hf # You might want to parameterize this later
+              value: meta-llama/Llama-2-7b-chat-hf
             - name: HF_TOKEN
               valueFrom:
                 secretKeyRef:
